{{$NEXT}}

0.84     2017-03-14

- Use SortLines::Naturally tidyall plugin to sort lists of stopwords instead
  of SortLines.


0.83     2017-03-05

- Made tidyall.ini generation smarter and more configurable.

- Fix a formatting issue with the generated tidyall.ini when there were no
  global ignores.


0.82     2017-02-28

- Don't assume that our dzil and podweaver plugin bundles have the same
  prefix.


0.81     2017-02-01

- Require Code::TidyAll 0.56 so we can use the global ignore feature in the
  geneated tidyall.ini file.


0.80     2017-01-08

- Fix test failures related to how POD is generated when running in Travis.


0.79     2017-01-08

- Replaced DROLSKY::CheckChangesHasContent plugin with
  EnsureChangesHasContent.

- Replaced DROLSKY::VersionProvider with VersionFromMainModule.

- Improved some POD generation code and the POD which is generated.


0.78     2016-11-29

- Handle a ppport.h file being generated in a subdirectory as well as in the
  root of the distro.


0.77     2016-11-12

- Generated POD said my IRC nick was "drolsky" instead of "autarch". Reported
  by mst.


0.76     2016-11-01

- Only tell CopyFileFromBuild to copy files that which actually exist in the
  distro. The latest version of that plugin now dies on missing files.


0.75     2016-10-11

- Added pod_coverage_also_private to pass more stuff to
  Test::Pod::Coverage::Configurable


0.74     2016-10-07

- Added CheckSelfDependency and CheckStrictVersion plugins.


0.73     2016-10-02

- Set jobs for Test::TidyAll plugin to 4 by default.


0.72     2016-09-25

- Make the Pod::Weaver bits work when used from a subclass of this bundle.


0.71     2016-09-17

- Removed Module::Metadata prereq and require Test::Version 2.05 instead.

- Added more docs.


0.70     2016-09-16

- Explicitly add Module::Metadata 1.000033 to the develop prereqs in order to
  work around bugs with Test::Version and earlier versions of