@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Add Code::TidyAll::Plugin::SortLines::Naturally to develop prereqs for
+  modules which use this bundle.
+
+
 0.84     2017-03-14
 
 - Use SortLines::Naturally tidyall plugin to sort lists of stopwords instead
